# disruptica-chat

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
api/: Dockerfile  alembic.ini  main.py  pyproject.toml
api/alembic/: env.py
api/controllers/: __init__.py  auth.py
api/database/: __init__.py  connection.py
api/middleware/: auth.py
api/routes/: __init__.py  auth.py  chat.py  home.py
api/schemas/: __init__.py  auth.py
api/scripts/: entrypoint.sh  init.sql
api/tests/: conftest.py  test_auth.py  test_chat.py  test_models.py
api/utils/: __init__.py  jwt.py
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/: middleware.ts
frontend/src/app/: globals.css
frontend/src/app/(App)/: layout.tsx  page.tsx
frontend/src/app/(App)/login/: page.tsx
frontend/src/app/(App)/register/: page.tsx
frontend/src/app/(App)/stream/: page.tsx
frontend/src/app/(App)/ui/stream/: page.tsx
frontend/src/app/(Auth)/: layout.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/stream/: route.ts
frontend/src/components/: AuthModal.tsx  Chat.tsx  ChatInput.tsx  CodeBlock.tsx  EmptyState.tsx  Header.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  TooltipButton.tsx  TypingIndicator.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/types/: auth.ts
